2004-10-20  Michael Koch  <konqueror@gmx.de>

	* javax/security/auth/login/NullConfiguration.java,
	javax/security/auth/x500/X500Principal.java,
	javax/security/cert/X509Certificate.java,
	javax/security/sasl/AuthenticationException.java,
	javax/security/sasl/AuthorizeCallback.java,
	javax/security/sasl/RealmCallback.java,
	javax/security/sasl/RealmChoiceCallback.java,
	javax/security/sasl/Sasl.java,
	javax/security/sasl/SaslClient.java,
	javax/security/sasl/SaslClientFactory.java,
	javax/security/sasl/SaslException.java,
	javax/security/sasl/SaslServer.java,
	javax/security/sasl/SaslServerFactory.java:
	Cleaned up import statements and copyright notices.

2004-10-20  Michael Koch  <konqueror@gmx.de>

	* gnu/java/rmi/rmic/RMIC.java: Reformatted.

2004-10-20  Michael Koch  <konqueror@gmx.de>

	* java/sql/Timestamp.java,
	java/text/AttributedCharacterIterator.java,
	java/text/AttributedString.java,
	java/util/zip/CheckedOutputStream.java,
	java/util/zip/DeflaterOutputStream.java,
	java/util/zip/ZipFile.java,
	javax/crypto/Cipher.java,
	javax/crypto/ExemptionMechanismException.java,
	javax/crypto/SecretKey.java,
	javax/crypto/SecretKeyFactory.java,
	javax/naming/directory/ModificationItem.java,
	javax/naming/directory/SearchControls.java,
	javax/naming/event/NamingListener.java,
	javax/naming/ldap/Control.java,
	javax/naming/ldap/ExtendedResponse.java,
	javax/net/ssl/SSLSocketFactory.java:
	Reorganized imports and fixed copyright headers.

2004-10-20  Michael Koch  <konqueror@gmx.de>

	* java/util/logging/ConsoleHandler.java,
	java/util/logging/ErrorManager.java,
	java/util/logging/FileHandler.java,
	java/util/logging/Filter.java,
	java/util/logging/Formatter.java,
	java/util/logging/Handler.java,
	java/util/logging/Level.java,
	java/util/logging/LogManager.java,
	java/util/logging/LogRecord.java,
	java/util/logging/Logger.java,
	java/util/logging/LoggingPermission.java,
	java/util/logging/MemoryHandler.java,
	java/util/logging/SimpleFormatter.java,